--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ img {
 /* Next & previous buttons */
 .prev,
 .next {
+  background-color: gray;
   cursor: pointer;
   position: absolute;
   top: 40%;
